--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,7 +4,7 @@
 @import 'show.css';
 
 *,*::before, *::after{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
 }
 
@@ -18,3 +18,8 @@ a {
     display:inline-block ;
     text-decoration: none;
 }
+
+img {
+    border-radius: 30px;
+    width: 200px;
+  }
