--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,30 +1,33 @@
 .main__container {
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 -5px 5px 5px;
+}
 
-    padding: 20px;
-    display: flex;
-    
-    
-    justify-content: space-around;
-    margin: 0 -5px 5px 5px;
-    }
-    
-    .main__input {
-    
-       max-width: 15%;
-       margin: 5px;
-       padding: 3px;
-       border-radius: 7px;
-       font-size: 18px;
-       background-color: rgb(255, 255, 255);
-       outline: none;
-       border: none;
-    }
-    
-    .main__list {
-        text-align: center;
-       
-    }
-    
-    .music__name {
-        color:grey
-    }
+.main__input {
+  max-width: 15%;
+  margin: 5px;
+  padding: 3px;
+  border-radius: 7px;
+  font-size: 18px;
+  background-color: rgb(255, 255, 255);
+  outline: none;
+  border: none;
+}
+
+.main__list {
+  margin-top: 50px;
+  padding-inline-start: 30px;
+  padding-inline-end: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  text-align: center;
+}
+
+.music {
+}
+p {
+  color: greenyellow;
+  font-size: 13px;
+}
