--- a/src/css/show.css
+++ b/src/css/show.css
@@ -1,49 +1,63 @@
 .show__container {
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    margin: 0 -5px 5px 5px;
-  }
-  
-  .show__input {
-    max-width: 15%;
-    margin: 5px;
-    padding: 3px;
-    border-radius: 7px;
-    font-size: 18px;
-    background-color: rgb(255, 255, 255);
-    outline: none;
-    border: none;
-  }
-  
-  .show__list {
-    display: flex;
-    justify-content:space-evenly;
-  
-    padding-right: auto;
-    padding-left: auto;
-  }
-  
-  .show__text {
-    margin-top: 50px;
-  }
-  
-  .show__info {
-    font-size: 25px;
-    color: bisque;
-    padding: 13px;
-  }
-  
-  img {
-    border-radius: 30px;
-    width: 250px;
-  }
-  
-  .show__span {
-    padding-right: 5px;
-  }
-  
-  .show__img {
-    margin-top: 40px;
-    text-align: center;
-  }
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.show__input {
+  margin: 5px;
+  padding: 3px;
+  border-radius: 4px;
+  font-size: 18px;
+  background-color: rgb(214, 216, 212);
+  outline: none;
+  border: none;
+  text-align: center;
+}
+
+.show__list {
+  display: flex;
+  justify-content: center;
+ margin-top: 20px;
+
+}
+
+.show__info {
+  font-size: 25px;
+  color: rgb(156, 107, 48);
+  padding: 13px;
+
+ 
+}
+
+.show__text {
+
+width: 20%;
+text-align: center;
+border-radius: 5px;
+}
+
+.show__img {
+  border-radius: 30px;
+  width: 250px;
+}
+
+.show__img--container {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.show__span {
+  padding-right: 5px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.show__delete {
+  text-align: center;
+}
+
+.show__span2 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: rgb(159, 141, 117);
+}
