--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,7 @@
 @import 'header.css';
 @import 'main.css';
 @import 'show.css';
+@import 'footer.css';
 
 *,*::before, *::after{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
