--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,6 +57,7 @@
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
 
 
 .btn--add {
