--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,9 +18,17 @@ body {
 a {
     display:inline-block ;
     text-decoration: none;
+    color:rgb(97, 236, 236)
 }
 
 img {
     border-radius: 30px;
     width: 200px;
+  }
+
+  .App {
+    text-align: center;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
