--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  margin-top: auto;
     background-color: #2d2d2d;
     /* height: 60px; */
     /* text-align: left; */
@@ -17,7 +18,7 @@
   }
 
   .description h2{
-    color: #6519bc;
+    color: #a659ff;
     font-size: x-large;
   }
 
@@ -29,7 +30,7 @@
   .contributors{
     width: 43%;
     padding-right: 20px;
-    color: #6519bc;
+    color: #a659ff;
     text-align: right;
   }
 
@@ -39,3 +40,6 @@
     font-size: small;
   }
 
+  .footer__text {
+    
+  }
