--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,15 +1,29 @@
 .header {
   outline: 2px solid;
-  background-color: rgb(17, 202, 70);
+  background-image: linear-gradient(to right, #a8caba 0%, #5d4157 100%);
 height: 60px;
 text-align: left;
 text-decoration: none;
 padding: 2px;
 }
 
-.header__name {
-    padding-left: 30px;
-    font-size: 50px;
-    color:rgb(101, 25, 188);
-    font-weight:300;
+.header__name.two {
+  
+  padding-left: 30px;
+  font-size: 30px;
+}
+.neon h3 {
+  margin: 1rem auto;
+  animation: neon 3s ease infinite;
+}
+@keyframes neon {
+  0%,
+  100% {
+      text-shadow: 0 0 10px #ef00e3a8, 0 0 20px #ef00e3a8, 0 0 20px #ef00e3a8, 0 0 20px #ef00e3a8, 0 0 2px #fed128, 2px 2px 2px #806914;
+      color: #f5efcb;
+  }
+  50% {
+      text-shadow: 0 0 2px #800e0b, 0 0 5px #800e0b, 0 0 5px #800e0b, 0 0 5px #800e0b, 0 0 2px #800e0b, 4px 4px 2px #40340a;
+      color: #eda0d3;
+  }
 }
