--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,16 +40,16 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #595959;
+  background-image: linear-gradient(-20deg, #dcb0ed 0%, #99c99c 100%);
   border-radius: 50px;
 }
 
 .music:hover .overlay {
-   opacity: .9;
+   opacity: 0.9;
 }
 
 .text {
-  color: white;
+  color: rgb(196, 32, 32);
   font-size: 36px;
   position: absolute;
   top: 35%;
