--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,6 @@
 .header {
+  display: flex;
+  justify-content: space-between;
   outline: 2px solid;
   background-image: linear-gradient(to right, #a8caba 0%, #5d4157 100%);
 height: 60px;
@@ -26,4 +28,20 @@ padding: 2px;
       text-shadow: 0 0 2px #800e0b, 0 0 5px #800e0b, 0 0 5px #800e0b, 0 0 5px #800e0b, 0 0 2px #800e0b, 4px 4px 2px #40340a;
       color: #eda0d3;
   }
+}
+
+
+.main__add--btn {
+  margin-top: 16px;
+  margin-right: 20px;
+  font-size: 18px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  
+} 
+
+button:hover{
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  background-color: #7cf2c3;
 }
