--- a/src/css/header.css
+++ b/src/css/header.css
@@ -31,12 +31,12 @@ padding: 2px;
 }
 
 
-.main__add--btn {
+.header__add--btn {
   margin-top: 16px;
   margin-right: 20px;
   font-size: 18px;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  
+  border-radius: 5px;
 } 
 
 button:hover{
