--- a/src/css/show.css
+++ b/src/css/show.css
@@ -10,7 +10,7 @@
   padding: 3px;
   border-radius: 4px;
   font-size: 18px;
-  background-color: rgb(214, 216, 212);
+  background-color: rgb(238, 251, 225);
   outline: none;
   border: none;
   text-align: center;
@@ -53,11 +53,36 @@ border-radius: 5px;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.show__delete {
-  text-align: center;
-}
-
 .show__span2 {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: rgb(159, 141, 117);
+}
+
+.show__btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 100px;
+  margin-top: 20px;
+}
+
+.btn__btn{
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  font-size: 15px;
+}
+
+.btn__btn:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  outline: none;
+}
+
+.blue{
+  background-color: rgb(75, 164, 164);
+}
+
+.red{
+  background-color: crimson;
 }
