--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,6 +18,7 @@
   }
 
   .description h2{
+    text-shadow: 2px 2px #110808;
     color: #a659ff;
     font-size: x-large;
   }
@@ -28,6 +29,7 @@
   }
 
   .contributors{
+    text-shadow: 2px 2px #030101;
     width: 43%;
     padding-right: 20px;
     color: #a659ff;
