--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   text-align: center;
+  justify-content: center;
 }
 
 .music {
