--- a/src/css/show.css
+++ b/src/css/show.css
@@ -70,6 +70,7 @@ border-radius: 5px;
 .btn__btn{
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   font-size: 15px;
+  cursor: pointer;
 }
 
 .btn__btn:hover {
@@ -85,4 +86,20 @@ border-radius: 5px;
 
 .red{
   background-color: crimson;
+}
+
+.btn__show--update{
+  font-size: 17px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  border-radius: 5px;
+  margin-left: 5px;
+  background-color: rgb(164, 119, 164);
+  cursor: pointer;
+}
+
+.btn__show--update:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  background-color: #7cf2c3;
 }
