--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,9 +4,10 @@
   padding-inline-start: 30px;
   padding-inline-end: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   text-align: center;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .music {
@@ -43,11 +44,24 @@
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  text-shadow: 1px 2px #110808;
 }
 
 img {
-  width: 100px;
+  border-radius: 30px;
+  width: 200px;
   height: 200px;
-  object-fit: cover;
+  object-fit:cover;
+
 }
 
+@media (max-width:500px){
+   .music-img {
+    height: 100px;
+    width: 100px;
+  }
+  .main__list{
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+   
+  }
+}
