--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin-top: 20px;
+    margin-top: auto;
     background-color: #2d2d2d;
     padding: 2px;
     display: flex;
@@ -31,6 +31,7 @@
     padding-bottom: 10px;
     color: #a659ff;
     text-align: right;
+    text-shadow: 2px 2px #110808;
   }
 
   .contributors a{
